a bunch of good changes

--- a/src/app/fsa/echart-spreadsheet.component.html
+++ b/src/app/fsa/echart-spreadsheet.component.html
@@ -15,7 +15,23 @@
                     <h3>Filtered By: {{listFilter}}</h3>
                 </div>
             </div>
-           
+            <p>
+                    It is a long established <span tooltip="Hello fact!"><b>fact</b></span> that a reader will be distracted by the readable content of a page when looking at its layout.
+                    The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+                    <span tooltip="many, but not all" tooltipPlacement="left"><b>Many desktop</b></span> publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+                    <span tooltip="various, but not all" tooltipPlacement="right"><b>Various versions</b></span> have evolved over the years, sometimes by accident, <span tooltip="another hint" tooltipPlacement="top"><b>sometimes on purpose</b></span> (injected humour and the like)
+            </p>
+
+            <!-- tooltip with dynamic html content -->
+            <div>
+                <tooltip-content #myTooltip>
+                    <b>Very</b> <span style="color: #C21F39">Dynamic</span> <span style="color: #00b3ee">Reusable</span>
+                    <b><i><span style="color: #ffc520">Tooltip With</span></i></b> <small>Html support</small>.
+                </tooltip-content>
+        
+                <button [tooltip]="myTooltip" >hover this button to see a tooltip</button>
+            </div>
+
             <table class="table-hover table-bordered" *ngIf='daylist && daylist.length'>
                 <thead>
                     <tr><th>StudentId</th>
@@ -36,7 +52,22 @@
                         <td>{{student.training}}</td>
                         <td>{{student.base}}</td>
                         <td *ngFor='let dayCell of student.dayCells' [class]='dayCell.cellColor' [colSpan]="dayCell.cellSpan">
-                            {{dayCell.cellText}}
+                                <span *ngIf="dayCell.popupCaptionText!='' && dayCell.containsFlights == false" [tooltip]="dayCell.popupCaptionText">
+                                   {{dayCell.cellText}}
+                                </span> 
+                                <div *ngIf="dayCell.containsFlights">
+                                        <tooltip-content #flightToolTip>
+                                            <b>Very</b>{{dayCell.dayListIndex}} <span style="color: #C21F39">Dynamic</span> <span style="color: #00b3ee">Reusable</span>
+                                            <b><i><span style="color: #ffc520">Tooltip With</span></i></b> <small>Html support</small>.
+                                        </tooltip-content>
+                                
+                                        <span [tooltip]="flightToolTip">
+                                            {{dayCell.cellText}}
+                                        </span>   
+                                </div>                                        
+                                <span *ngIf="dayCell.popupCaptionText=='' && dayCell.containsFlights == false">
+                                    {{dayCell.cellText}}
+                                </span>                                      
                         </td>
                     </tr>
                 </tbody>
