--- a/src/app/fsa/echart-spreadsheet.component.css
+++ b/src/app/fsa/echart-spreadsheet.component.css
@@ -1,10 +1,10 @@
-table {
+table.echart {
     width: 2000px;
     
   
 }
 th {
-    width: 90px;
+    width: 50px;
 }
 th.studentName {
     width: 380px;
@@ -39,4 +39,24 @@ background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,20
 background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
 
+}
+table.flightTable {
+    position: absolute;
+    left: -30px;    
+    color: black;
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
+
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fefcea+0,f1da36+100;Gold+3D */
+    background: rgb(254,252,234); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(254,252,234,1) 0%, rgba(241,218,54,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(254,252,234,1) 0%,rgba(241,218,54,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(254,252,234,1) 0%,rgba(241,218,54,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefcea', endColorstr='#f1da36',GradientType=0 ); /* IE6-9 */
+
+
+}
+span.flightCell {
+    width: 100%;
 }
