--- a/src/app/fsa/echart-spreadsheet.component.html
+++ b/src/app/fsa/echart-spreadsheet.component.html
@@ -15,24 +15,10 @@
                     <h3>Filtered By: {{listFilter}}</h3>
                 </div>
             </div>
-            <p>
-                    It is a long established <span tooltip="Hello fact!"><b>fact</b></span> that a reader will be distracted by the readable content of a page when looking at its layout.
-                    The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
-                    <span tooltip="many, but not all" tooltipPlacement="left"><b>Many desktop</b></span> publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
-                    <span tooltip="various, but not all" tooltipPlacement="right"><b>Various versions</b></span> have evolved over the years, sometimes by accident, <span tooltip="another hint" tooltipPlacement="top"><b>sometimes on purpose</b></span> (injected humour and the like)
-            </p>
 
-            <!-- tooltip with dynamic html content -->
-            <div>
-                <tooltip-content #myTooltip>
-                    <b>Very</b> <span style="color: #C21F39">Dynamic</span> <span style="color: #00b3ee">Reusable</span>
-                    <b><i><span style="color: #ffc520">Tooltip With</span></i></b> <small>Html support</small>.
-                </tooltip-content>
-        
-                <button [tooltip]="myTooltip" >hover this button to see a tooltip</button>
-            </div>
 
-            <table class="table-hover table-bordered" *ngIf='daylist && daylist.length'>
+
+            <table class="table-hover table-bordered echart" *ngIf='daylist && daylist.length'>
                 <thead>
                     <tr><th>StudentId</th>
                         <th class="studentName">Name</th>  
@@ -52,20 +38,43 @@
                         <td>{{student.training}}</td>
                         <td>{{student.base}}</td>
                         <td *ngFor='let dayCell of student.dayCells' [class]='dayCell.cellColor' [colSpan]="dayCell.cellSpan">
-                                <span *ngIf="dayCell.popupCaptionText!='' && dayCell.containsFlights == false" [tooltip]="dayCell.popupCaptionText">
+                                <span *ngIf="dayCell.popupCaptionText!='' && dayCell.flights.length == 0" [tooltip]="dayCell.popupCaptionText">
                                    {{dayCell.cellText}}
                                 </span> 
-                                <div *ngIf="dayCell.containsFlights">
-                                        <tooltip-content #flightToolTip>
-                                            <b>Very</b>{{dayCell.dayListIndex}} <span style="color: #C21F39">Dynamic</span> <span style="color: #00b3ee">Reusable</span>
-                                            <b><i><span style="color: #ffc520">Tooltip With</span></i></b> <small>Html support</small>.
+                                <div *ngIf="dayCell.flights.length > 0">
+                                        <tooltip-content #flightToolTip >
+                                            <table class="flightTable" >
+                                                <thead>
+                                                    <tr>
+                                                        <th>FLT</th>
+                                                        <th>STA</th>
+                                                        <th>DEP</th>
+                                                        <th>STA</th>
+                                                        <th>ARR</th>
+                                                        <th>ACFLY</th>
+                                                        <th>FLEET</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr *ngFor="let flight of dayCell.flights">
+                                                        <td>{{flight.flt}}</td>
+                                                        <td>{{flight.departureStation}}</td>
+                                                        <td>{{flight.departureTime}}</td>
+                                                        <td>{{flight.arrivalStation}}</td>
+                                                        <td>{{flight.arrivalTime}}</td>
+                                                        <td>{{flight.ac_fly}}</td>
+                                                        <td>{{flight.fleet}}</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+
                                         </tooltip-content>
                                 
-                                        <span [tooltip]="flightToolTip">
+                                        <span [tooltip]="flightToolTip" class="flightCell"  >
                                             {{dayCell.cellText}}
                                         </span>   
                                 </div>                                        
-                                <span *ngIf="dayCell.popupCaptionText=='' && dayCell.containsFlights == false">
+                                <span *ngIf="dayCell.popupCaptionText=='' && dayCell.flights.length == 0">
                                     {{dayCell.cellText}}
                                 </span>                                      
                         </td>
@@ -73,40 +82,6 @@
                 </tbody>
             </table>
     
-            <div class="table-responsive">
-                <table class="table-hover table-bordered" *ngIf='rows && rows.length'>
-                    <thead>
-                        <tr>
-                            <th>
-                                <button (click)='toggleImage()' class="btn btn-primary">
-                                    {{showImage ? 'Hide' : 'Show'}} Image
-                                </button>
-                            </th>
-                            <th>Student Id</th>
-                            <th>Name</th>
-                            <th>Available</th>
-                            <th>Price</th>
-                            <th>5 Star Rating</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor='let student of rows'>
-                            <td>
-                                <img *ngIf='showImage' [src]='student.imageUrl'
-                                 [title]='student.productName | uppercase'
-                                 [style.width.px]='imageWidth'
-                                 [style.margin.px]='imageMargin'>
-                            </td>
-                            <td>{{student.studentId}}</td>
-                            <td>{{student.name}}</td>
-                            <td>{{student.releaseDate}}</td>
-                            <td>{{student.price | currency:'USD':true:'1.2-2' }}</td>
-                            <td><pm-star [mainText]='student.studentId' [rating]='student.starRating'
-                                    (notify)='onNotify($event)'></pm-star></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
     
         </div>
     
